# rfparser

./: .flake8  .gitignore  ElementTree39.py  LICENSE  README.md  config.yaml.sample  main.py  mypy.ini  pubs_for_website.xml  pyproject.toml  tox.ini  util.py
.github/workflows/: deploy.yaml  lint.yaml  test.yaml
rfparser/: ElementTree39.py  __init__.py  util.py
tests/: test_dois.py  test_utils.py
